# A5

./: .gitignore  AGENTS.md  README.md  collect.sh  start.sh  test_dual_arm.py  test_single_arm.py
.opencode/plans/: 2026-04-25-thread-safety-recorder.md
ARX_CAN/: J1-5cali  J6cali  arx_can.rules  arx_can0  arx_can1  arx_can2  arx_can3  arx_can5  arx_can5.sh  arx_can6  joint1-5_cali  joint6_cali  search  set
ARX_CAN/arx_can/: arx_can0  arx_can3  arx_can6.sh
a5_bimanual_arm/: AGENTS.md  README.md  TODO.md  package.xml  setup.cfg  setup.py  validate_hdf5.py
a5_bimanual_arm/a5_bimanual_arm/: bimanual_arm_controller.py  bimanual_arm_controller_node.py  keyboard_handler.py  recorder.py
a5_bimanual_arm/launch/: bimanual_arm.launch.py
a5_bimanual_arm/test/: test_recorder_thread_safety.py
arx_a5_python/: AGENTS.md  package.xml  setup.cfg  setup.py
arx_a5_python/arx_a5_python/: __init__.py  single_arm.py
arx_a5_python/arx_a5_python/urdf/: a5.urdf
arx_a5_python/cpp/: CMakeLists.txt  build.sh
arx_a5_python/cpp/lib/arx_r5_src/include/arx_r5_src/interfaces/: InterfacesPy.hpp  InterfacesThread.hpp
arx_a5_python/cpp/src/: single_arm_interface.cpp
bimanual/: CMakeLists.txt
bimanual/script/: a5.urdf  a5_head.urdf  single_arm.py
bimanual/src/: single_arm_interface.cpp
realsense/: realsense.sh
tools/: 02install.x
transmission/: arm_bridge.py
