<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a5_bimanual_arm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2676239430@qq.com">tony</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>arx_a5_python</depend>
  <depend>rclpy</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-transitions</exec_depend>
  <exec_depend>python3-h5py</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pynput</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
